SERVER-73751 MovePrimary shouldn't copy indexes of sharded collections

(cherry picked from commit c636ba3a9914fd3eddc905d8b1dfc50668e239b4)