src/mongo/db/cloner.cpp
@@ -539,6 +539,13 @@ Status Cloner::copyDb(OperationContext* opCtx,
 
         // now build the secondary indexes
         for (auto&& params : createCollectionParams) {
+
+            // Indexes of sharded collections are not copied: the primary shard is not required to
+            // have all indexes. The listIndexes cmd is sent to the shard owning the MinKey value.
+            if (params.shardedColl) {
+                continue;
+            }
+
             LOGV2(20422,
                   "copying indexes for: {collectionInfo}",
                   "Copying indexes",
